Fix : 소개 링크 수정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
             <nav class="flex space-x-6">
                 <a href="/" class="text-blue-300 hover:text-white">홈</a>
                 <a href="/posts" class="hover:text-gray-300">게시글</a>
-                <a href="/about" class="hover:text-gray-300">소개</a>
+                <a href="https://co2plant.github.io/" class="hover:text-gray-300">소개</a>
             </nav>
         </div>
     </header>
