--- a/views/post.ejs
+++ b/views/post.ejs
@@ -11,8 +11,8 @@
                 </div>
             </header>
             
-            <div class="prose max-w-none mb-8">
-                <%- post.content %>
+            <div class="markdown-body mb-8">
+                <%- post.htmlContent || post.content %>
             </div>
             
             <footer class="border-t pt-6">
